@@ -1717,6 +1717,9 @@ Release 0.20.2 - Unreleased
     HADOOP-6269. Fix threading issue with defaultResource in Configuration.
     (Sreekanth Ramakrishnan via cdouglas)
 
+    HADOOP-6386. NameNode's HttpServer can't instantiate InetSocketAddress:
+    IllegalArgumentException is thrown. (cos)
+
 Release 0.20.1 - 2009-09-01
 
   INCOMPATIBLE CHANGES
